change target dir from /tmp to /home/bwdc

--- a/ansible/configure-encrypted-secrets/tasks/main.yml
+++ b/ansible/configure-encrypted-secrets/tasks/main.yml
@@ -5,21 +5,21 @@
     - name: Copy the setup_bwdc.sh script to /tmp
       copy:
         src: files/bwdc.sh
-        dest: /tmp/bwdc.sh
+        dest: /home/bwdc/bwdc.sh
         owner: bwdc
         group: bwdc
         mode: '0755'
 
     - name: Ensure bwdc user has permissions to execute the script
       file:
-        path: /tmp/bwdc.sh
+        path: /home/bwdc/bwdc.sh
         owner: bwdc
         group: bwdc
         mode: '0755'
 
     - name: Run the setup_bwdc.sh script as bwdc user
       become_user: bwdc
-      shell: /tmp/bwdc.sh
+      shell: /home/bwdc/bwdc.sh
       environment:
         HOME: /home/bwdc
         USER: bwdc
