replace CLIENTSECRET with generic description

--- a/python/example.env
+++ b/python/example.env
@@ -9,7 +9,7 @@ STATE_FILE_PATH='./state.json'
 BW_CLI_USERNAME='<user@email.com>' # replace with a service user 
 
 BW_CLIENTID='user.<CLIENT_ID>' # replace with your service user USER api client ID
-BW_CLIENTSECRET='DOnnpmumdVTtjp5il92GgSliAOnWOu' # replace with your service user USER api client secret
+BW_CLIENTSECRET='user.<CLIENT_SECRET>' # replace with your service user USER api client secret
 
 BW_PATH='/usr/local/bin/bw'
 BWDC_PATH='/usr/local/bin/bwdc'
