--- a/python/example.env
+++ b/python/example.env
@@ -1,4 +1,4 @@
-# Replace the below values with your own
+# Replace the below values with your own based on your Bitwarden configuration
 
 BW_API_URL=https://api.bitwarden.com # replace with your SH or .eu URL if necessary
 BW_IDENTITY_URL=https://identity.bitwarden.com # replace with your SH or .eu URL if necessary
